<package>
  <name>beerbot_bringup</name>
  <version>0.4.0</version>

  <description>Beerbot Startup Package</description>

  <maintainer email="travis@traviscole.me">Travis Cole</maintainer>
  <license>BSD</license>
  <author email="travis@traviscole.me">Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>