<package>
  <name>beerbot_description</name>
  <version>1.0.0</version>
  <description>
     beerbot_description provides a model of BeerBot for simulation and visualization. 
  </description>
  <author email="travis@traviscole.me">Travis Cole</author>
  <maintainer email="travis@traviscole.me">Travis Cole</maintainer>
  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
